tests/ui/editions/nested-macro-rules-edition.e2021.stderr
error: expected identifier, found reserved keyword `gen`
  --> $DIR/nested-macro-rules-edition.rs:30:5
   |
LL |     macro_inner_input!{}
   |     ^^^^^^^^^^^^^^^^^^^^ expected identifier, found reserved keyword
   |
   = note: this error originates in the macro `macro_inner_input` (in Nightly builds, run with -Z macro-backtrace for more info)
help: escape `gen` to use it as an identifier
   |
LL |     nested_macro_rules_dep::make_macro_with_input!{r#gen}
   |                                                    ++

error: expected identifier, found reserved keyword `gen`
  --> $DIR/nested-macro-rules-edition.rs:35:5
   |
LL |     macro_inner!{}
   |     ^^^^^^^^^^^^^^ expected identifier, found reserved keyword
   |
   = note: this error originates in the macro `macro_inner` (in Nightly builds, run with -Z macro-backtrace for more info)
help: escape `gen` to use it as an identifier
  --> $DIR/auxiliary/nested_macro_rules_dep_2024.rs:19:24
   |
LL |                 pub fn r#gen() {}
   |                        ++

error: aborting due to 2 previous errors

